# smpextract

./: Dockerfile  README.md  project.toml  pyproject.toml  smpextract.py
