# define build tool 
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# define project metadata
[project]
name = "smpextract"
version = "1.0.0"
description = "Extracting eye frame for Smooth Purse Image Annotation"
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
dev = ["pip-tools"]

[project.urls]
homepage = "https://github.com/khaingnaing/smpextract"

[project.scripts]
smpextract = "smpextract:main"
